fix: spacing on web

--- a/css/index.css
+++ b/css/index.css
@@ -113,10 +113,6 @@ figcaption {
   margin: 1rem 0;
 }
 
-.markdown-body p {
-  margin-bottom: 0.15rem;
-}
-
 .markdown-body h3 {
   font-size: 1rem;
   margin-bottom: 0.5rem;
